tests/build/cases/widget/unknown_inherit.stderr
error[E0412]: cannot find type `UnknownType` in this scope
 --> cases/widget/unknown_inherit.rs:4:23
  |
4 | pub struct TestWidget(UnknownType);
  |                       ^^^^^^^^^^^ not found in this scope
