tests/build/cases/widget/unknown_inherit.rs
use zero_ui::prelude_wgt::widget;

#[widget($crate::TestWidget)]
pub struct TestWidget(UnknownType);

fn main() {}
